--- a/package.json
+++ b/package.json
@@ -20,9 +20,19 @@
   },
   "homepage": "https://github.com/zchengsite/pixel-drawing-board#readme",
   "devDependencies": {
-    "css-loader": "^5.0.0",
+    "@babel/core": "^7.12.13",
+    "@babel/plugin-proposal-class-properties": "^7.12.13",
+    "@babel/preset-env": "^7.12.13",
+    "babel-loader": "^8.2.2",
+    "buffer": "^6.0.3",
+    "css-loader": "^5.0.1",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^4.5.0",
+    "node-sass": "^5.0.0",
+    "postcss-loader": "^5.0.0",
+    "postcss-preset-env": "^6.7.0",
+    "sass-loader": "^11.0.0",
+    "stream-browserify": "^3.0.0",
     "style-loader": "^2.0.0",
     "webpack": "^5.3.2",
     "webpack-cli": "^4.1.0",
